# multi-agent-dev

./: .code-health-baseline.json  .gitignore  AGENTS.md  CODE-REVIEW-TASKS.md  EXAMPLES.md  README.md  REFACTOR-TASKS.md  REVIEW-NOTES.md  USAGE.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: code-health.yml  deploy-slides.yml
docs/: backlog-planner-rubric.md  branch-isolation-plan.md  multi-agent-dev-overview.md  multi-builder-design.md  planner-quality-rubric.md  story-planning-implementation.md  token-usage-analysis.md
scripts/: code_health_check.py
src/agent/: __main__.py  bootstrap.py  builder.py  cli.py  config.py  git_helpers.py  legacy_watchers.py  milestone.py  orchestrator.py  planner.py  prompts.py  sentinel.py  terminal.py  tester.py  utils.py  validator.py  watcher.py
src/agentic_dev/: __init__.py  __main__.py  backlog_checker.py  bootstrap.py  builder.py  cli.py  code_analysis.py  config.py  git_helpers.py  journeys.py  legacy_watchers.py  milestone.py  milestone_reviewer.py  orchestrator.py  planner.py  sentinel.py  terminal.py  tester.py  utils.py  validator.py  version.py  watcher.py
tests/: test_backlog_checker.py  test_branch_reviewer.py  test_builder.py  test_cli.py  test_code_analysis.py  test_code_health_check.py  test_journeys.py  test_merge_recovery.py  test_milestone.py  test_planner.py  test_prompts.py  test_utils.py  test_validator.py
tests/harness/: run_test.cmd  run_test.py  run_test.sh  sample_spec.md  sample_spec_bookstore_api.md  sample_spec_bookstore_fullstack.md  sample_spec_cli_calculator.md  (+4 more)
(+22 files in other folders)
